--- a/polistock/backend/package.json
+++ b/polistock/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "0.0.0",
   "private": true,
-  "type": "module"
+  "type": "module",
   "scripts": {
     "start": "node ./bin/www"
   },
