--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.21.2",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3"
   }
