--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
 node_modules
 .DS_Store
+*.ipynb
+.env
+.env.local
+.env.*.local
+venv/
+.venv/
+env/
+ENV/
+__pycache__/
+*.pyc
+*.pyo
+.DS_Store
+.vscode/
+*.log
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+Thumbs.db
+*.log
+dist/
+build/
+*.egg-info/myenv.env
+**/.env
+myenv.env*.ipynb
+.ipynb_checkpoints/
