--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "prettier": "^3.7.4",
     "vite": "npm:rolldown-vite@7.2.2"
   },
   "overrides": {
