--- a/data_pipeline/requirements.txt
+++ b/data_pipeline/requirements.txt
@@ -40,6 +40,7 @@ fqdn==1.5.1
 future==1.0.0
 fuzzywuzzy==0.18.0
 gevent==25.9.1
+git-filter-repo==2.47.0
 google-ai-generativelanguage==0.6.10
 google-api-core==2.23.0
 google-api-python-client==2.153.0
@@ -56,6 +57,7 @@ googleapis-common-protos==1.66.0
 greenlet==3.3.0
 grpcio==1.67.1
 grpcio-status==1.67.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.6
 httplib2==0.22.0
@@ -191,9 +193,3 @@ Werkzeug==3.1.3
 wsproto==1.2.0
 zope.event==6.1
 zope.interface==8.1.1
-flask==3.0.0
-flask-cors==4.0.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-python-dotenv==1.0.0
-lxml==5.1.0
