--- a/data_pipeline/requirements.txt
+++ b/data_pipeline/requirements.txt
@@ -7,13 +7,18 @@ arrow==1.3.0
 asttokens==2.4.1
 async-lru==2.0.4
 attrs==24.2.0
+awscli==1.44.4
+awsebcli==3.25.3
 babel==2.16.0
 bcrypt==4.3.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blessed==1.25.0
 blinker==1.9.0
+botocore==1.42.14
 CacheControl==0.14.3
 cachetools==5.5.0
+cement==2.10.14
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.3.2
@@ -27,9 +32,12 @@ cycler==0.12.1
 debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.3.1
+docutils==0.19
 duckdb==1.4.3
 et_xmlfile==2.0.0
 executing==2.0.1
+fabric==3.2.2
 fastjsonschema==2.20.0
 filelock==3.20.1
 firebase-admin==6.8.0
@@ -110,11 +118,12 @@ numpy==2.0.0
 openpyxl==3.1.5
 outcome==1.3.0.post0
 overrides==7.7.0
-packaging==25.0
+packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
 paramiko==4.0.0
 parso==0.8.4
+pathspec==0.12.1
 patsy==0.5.6
 pexpect==4.9.0
 pillow==11.0.0
@@ -152,11 +161,13 @@ requests-file==3.0.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.20.0
-rsa==4.9
+rsa==4.7.2
+s3transfer==0.16.0
 scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
 selenium==4.27.1
+semantic-version==2.10.0
 Send2Trash==1.8.3
 setuptools==75.1.0
 six==1.16.0
@@ -168,6 +179,7 @@ soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
 tabulate==0.9.0
+termcolor==2.5.0
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.3.0
@@ -183,13 +195,14 @@ tzdata==2024.2
 undetected-chromedriver==3.5.5
 uri-template==1.3.0
 uritemplate==4.1.1
-urllib3==2.5.0
+urllib3==1.26.20
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==14.1
 Werkzeug==3.1.3
+wrapt==2.0.1
 wsproto==1.2.0
 zope.event==6.1
 zope.interface==8.1.1
