--- a/data_pipeline/requirements.txt
+++ b/data_pipeline/requirements.txt
@@ -1,208 +1,7 @@
-annotated-types==0.7.0
-anyio==4.6.0
-appnope==0.1.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==24.2.0
-awscli==1.44.4
-awsebcli==3.25.3
-babel==2.16.0
-bcrypt==4.3.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blessed==1.25.0
-blinker==1.9.0
-botocore==1.42.14
-CacheControl==0.14.3
-cachetools==5.5.0
-cement==2.10.14
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.8
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.0
-cors==1.0.1
-cryptography==44.0.3
-cycler==0.12.1
-debugpy==1.8.2
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.3.1
-docutils==0.19
-duckdb==1.4.3
-et_xmlfile==2.0.0
-executing==2.0.1
-fabric==3.2.2
-fastjsonschema==2.20.0
-filelock==3.20.1
-firebase-admin==6.8.0
-Flask==3.1.0
-flask-cors==6.0.2
-fonttools==4.54.1
-fqdn==1.5.1
-future==1.0.0
-fuzzywuzzy==0.18.0
-gevent==25.9.1
-git-filter-repo==2.47.0
-google-ai-generativelanguage==0.6.10
-google-api-core==2.23.0
-google-api-python-client==2.153.0
-google-auth==2.36.0
-google-auth-httplib2==0.2.0
-google-cloud-bigquery==3.38.0
-google-cloud-core==2.4.3
-google-cloud-firestore==2.20.2
-google-cloud-storage==3.1.0
-google-crc32c==1.7.1
-google-generativeai==0.8.3
-google-resumable-media==2.7.2
-googleapis-common-protos==1.66.0
-greenlet==3.3.0
-grpcio==1.67.1
-grpcio-status==1.67.1
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.6
-httplib2==0.22.0
-httpx==0.27.2
-ibm-cos-sdk==2.14.3
-ibm-cos-sdk-core==2.14.3
-ibm-cos-sdk-s3transfer==2.14.3
-ibm_watsonx_ai==1.3.34
-idna==3.8
-imbalanced-learn==0.13.0
-invoke==2.2.0
-ipykernel==6.29.5
-ipython==8.26.0
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kiwisolver==1.4.7
-lomond==0.3.3
-lxml==5.3.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mistune==3.0.2
-mlxtend==0.23.4
-msgpack==1.1.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-newsapi-python==0.2.7
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==2.0.0
-openpyxl==3.1.5
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-paramiko==4.0.0
-parso==0.8.4
-pathspec==0.12.1
-patsy==0.5.6
-pexpect==4.9.0
-pillow==11.0.0
-platformdirs==4.2.2
-polars==1.35.2
-polars-runtime-32==1.35.2
-prometheus_client==0.21.0
-prompt_toolkit==3.0.47
-proto-plus==1.25.0
-protobuf==5.28.3
-psutil==6.0.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==22.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-PyJWT==2.10.1
-PyNaCl==1.5.0
-pyparsing==3.2.0
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-json-logger==2.0.7
-pytz==2024.2
-PyYAML==6.0.2
-pyzmq==26.0.3
-referencing==0.35.1
-regex==2025.7.34
-requests==2.32.5
-requests-file==3.0.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.20.0
-rsa==4.7.2
-s3transfer==0.16.0
-scikit-learn==1.5.2
-scipy==1.14.1
-seaborn==0.13.2
-selenium==4.27.1
-semantic-version==2.10.0
-Send2Trash==1.8.3
-setuptools==75.1.0
-six==1.16.0
-sklearn-compat==0.1.1
-sniffio==1.3.1
-sodapy==2.2.0
-sortedcontainers==2.4.0
-soupsieve==2.6
-stack-data==0.6.3
-statsmodels==0.14.4
-tabulate==0.9.0
-termcolor==2.5.0
-terminado==0.18.1
-threadpoolctl==3.5.0
-tinycss2==1.3.0
-tldextract==5.3.0
-tornado==6.4.1
-tqdm==4.67.0
-traitlets==5.14.3
-trio==0.27.0
-trio-websocket==0.11.1
-types-python-dateutil==2.9.0.20240906
-typing_extensions==4.12.2
-tzdata==2024.2
-undetected-chromedriver==3.5.5
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==1.26.20
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==14.1
-Werkzeug==3.1.3
-wrapt==2.0.1
-wsproto==1.2.0
-zope.event==6.1
-zope.interface==8.1.1
+flask==3.0.0
+flask-cors==4.0.0
+gunicorn==21.2.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+python-dotenv==1.0.0
+lxml==5.1.0
