--- a/data_pipeline/Procfile
+++ b/data_pipeline/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn app.api:application --bind 0.0.0.0:$PORT --workers 3 --timeout 60
+web: gunicorn --bind 0.0.0.0:8080 --workers 3 --timeout 60 app.api:application
