fix: Use PORT env variable in Procfile

--- a/data_pipeline/Procfile
+++ b/data_pipeline/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn --bind 0.0.0.0:8080 --workers 3 --timeout 60 app.api:application
+web: gunicorn --bind :$PORT --workers 3 --timeout 60 app.api:application
